
  * Pass --exclude=migrate-0.8.py to dh_pycentral; in order to not depend
    on python2.6; but recommend python2.6.
  * Use dh_link instead of ln for python-apt-doc (Closes: #573523).
  * Pass --link-doc=python-apt to dh_installdocs.
  * Install examples to python-apt-doc instead of python-apt.
  * tests/test_all.py: Write information header to stderr, not stdout.

 -- Julian Andres Klode <jak@debian.org>  Thu, 11 Mar 2010 19:33:26 +0100

python-apt (0.7.94) unstable; urgency=low

  * Move documentation into python-apt-doc (Closes: #572617)
  * Build documentation only once on the default Python version.
  * python/acquire-item.cc:
    - Add AcquireItem.partialsize member.
  * python/apt_pkgmodule.cc:
    - Treat '>>' and '>', '<<' and '<' as identical in check_dep (LP: #535667).
  * python/generic.cc:
    - Map UntranslatedDepType to dep_type_untranslated.
  * python/tag.cc:
    - Hack the TagFile iterator to not use shared storage (Closes: #572596):
      Scan once, duplicate the section data, and scan again.
  * apt/package.py:
    - Create a string class BaseDependency.__dstr which makes '>' equal to
      '>>' and '<' equal to '<<' (compatibility).
    - Use the binary package version in Version.fetch_source() if the
      source version is not specified (i.e. in the normal case).
    - Always return unicode strings in Package.get_changelog (Closes: #572998).
  * apt/progress/text.py:
    - Drop InstallProgress, it's useless to keep this alias around.
  * apt/progress/old.py:
    - Let the new method call the old one; e.g. status_update() now calls
      self.statusUpdate(). This improves compatibility for sub classes.
  * Merge with Ubuntu:
    - util/get_ubuntu_mirrors_from_lp.py:
      + rewritten to use +archivemirrors-rss and feedburner
    - pre-build.sh: update ubuntu mirrors on bzr-buildpackage (and also do this
      for Debian mirrors)
    - add break for packagekit-backend-apt (<= 0.4.8-0ubuntu4)
  * tests: